[gd_scene load_steps=19 format=2]

[ext_resource path="res://Themes/alterebro-pixel-font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Multiplayer Mode/Multiplayer.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Road.png" type="Texture" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Pause.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player2.tscn" type="PackedScene" id=6]
[ext_resource path="res://victory.tscn" type="PackedScene" id=7]
[ext_resource path="res://Themes/selected_button.tres" type="StyleBox" id=8]
[ext_resource path="res://Themes/non_selected_button.tres" type="StyleBox" id=9]
[ext_resource path="res://Themes/pressed_button.tres" type="StyleBox" id=10]
[ext_resource path="res://Themes/hovered_button.tres" type="StyleBox" id=11]
[ext_resource path="res://Soundtrack/ideiagalinha2.ogg" type="AudioStream" id=12]
[ext_resource path="res://Sprites/icon.png" type="Texture" id=13]
[ext_resource path="res://Scripts/Multiplayer Mode/PlayerTwoExperimental.gd" type="Script" id=15]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 33
font_data = ExtResource( 1 )

[node name="Multiplayer" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.754, 0.354 )
texture = ExtResource( 3 )
centered = false

[node name="victory" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 72 )
collision_layer = 2

[node name="Player" parent="." instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 400, 696 )

[node name="Player2" parent="." instance=ExtResource( 6 )]
pause_mode = 1
position = Vector2( 800, 696 )
script = ExtResource( 15 )

[node name="Timer_Fast_Road" type="Timer" parent="."]
pause_mode = 1
wait_time = 0.3
autostart = true

[node name="Timer_Slow_Road" type="Timer" parent="."]
pause_mode = 1
wait_time = 0.5
autostart = true

[node name="Winner" type="Label" parent="."]
margin_top = -3.0
margin_right = 1280.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Scoreboard1" type="Label" parent="CanvasLayer"]
margin_left = 400.0
margin_top = 3.0
margin_right = 419.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="Scoreboard2" type="Label" parent="CanvasLayer"]
margin_left = 800.0
margin_top = 3.0
margin_right = 819.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="RestartButton" type="Button" parent="CanvasLayer"]
pause_mode = 2
margin_left = 448.0
margin_top = 312.0
margin_right = 768.0
margin_bottom = 376.0
focus_neighbour_top = NodePath("../BMenuButton")
focus_neighbour_bottom = NodePath("../BMenuButton")
size_flags_vertical = 5
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 9 )
text = "Restart"

[node name="BMenuButton" type="Button" parent="CanvasLayer"]
pause_mode = 2
margin_left = 448.0
margin_top = 392.0
margin_right = 768.0
margin_bottom = 456.0
focus_neighbour_top = NodePath("../RestartButton")
focus_neighbour_bottom = NodePath("../RestartButton")
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 9 )
text = "Back to Menu"

[node name="Menu_Button" type="Button" parent="CanvasLayer"]
margin_left = 6.0
margin_top = 4.0
margin_right = 156.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
text = "Menu"

[node name="Pause" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 589, 864 )
texture = ExtResource( 13 )

[connection signal="scored" from="Player" to="." method="_on_Player_scored"]
[connection signal="scored" from="Player2" to="." method="_on_Player2_scored"]
[connection signal="timeout" from="Timer_Fast_Road" to="." method="_on_Timer_Fast_Road_timeout"]
[connection signal="timeout" from="Timer_Slow_Road" to="." method="_on_Timer_Slow_Road_timeout"]
[connection signal="pressed" from="CanvasLayer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/BMenuButton" to="." method="_on_BMenuButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu_Button" to="CanvasLayer/Pause" method="_on_Menu_Button_pressed"]
